@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2021-06-09
+GNU mailutils NEWS -- history of user-visible changes. 2021-06-10
 See the end of file for copying conditions.
 
 Please send mailutils bug reports to <bug-mailutils@gnu.org>.
@@ -42,6 +42,16 @@ deprecated.  Use 'retry-sleep' instead.
   - fullnames
       Controls whether personal parts of emails are preserved in
       recipient addresses when replying.  Default is true.
+  - outfilename
+      Defines the algorithm to convert the recipient email to the
+      name of the file used to record outgoing messages to that
+      recipient.  This affects the following commands: Copy,
+      Save, Mail, followup, and Followup.  This is a string variable,
+      that can take one of the following values:
+        "local"  - Local part of the email address is taken as the
+	           file name.  This is the default.
+	"email"  - Entire email is takes as the file name.
+	"domain" - Domain part of the email is used as the file name.
 
 Version 3.12, 2021-02-13
 
